tests/baselines/reference/defaultValueInConstructorOverload1.errors.txt
defaultValueInConstructorOverload1.ts(2,17): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.


==== defaultValueInConstructorOverload1.ts (1 errors) ====
    class C {
        constructor(x = '');
                    ~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
        constructor(x = '') {
        }
    }